--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "vuetify": "2.2.17",
     "webpack": "4.42.0",
     "webpack-node-externals": "1.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
